<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_systems">Systems</string>
    <string name="title_games">Games</string>
    <string name="title_settings">Settings</string>
    <string name="recent">Recents</string>
    <string name="favorites">Favorites</string>
    <string name="discover">Discover</string>
    <string name="rescan">Rescan</string>
    <string name="none">None</string>
    <string name="directory">Directory</string>
    <string name="display_filter">Display filter</string>
    <string name="roms">ROMs</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="show_all">Show All</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_input">Input</string>
    <string name="settings_category_advanced">Advanced</string>
    <string name="settings_title_enable_autosave">Autosave state</string>
    <string name="settings_title_enable_touch_feedback">Vibrate on touch</string>
    <string name="settings_title_tilt_sensitivity">Tilt sensor sensitivity</string>
    <string name="settings_gamepad_settings">Gamepad settings</string>
    <string name="settings_gamepad_button_name">Button %1$s</string>
    <string name="settings_retropad_button_name">RetroPad %1$s</string>
    <string name="settings_retropad_button_unassigned">Unassigned</string>
    <string name="settings_gamepad_category_enabled">Enabled Gamepads</string>
    <string name="settings_gamepad_category_general">General</string>
    <string name="settings_gamepad_title_reset_bindings">Reset bindings</string>
    <string name="settings_gamepad_title_game_menu">Menu</string>
    <string name="settings_title_open_cores_selection">Change Cores</string>
    <string name="settings_description_open_cores_selection">Select which core is associated to a system</string>
    <string name="settings_title_display_bios_info">BIOS</string>
    <string name="settings_description_display_bios_info">Display detected and supported BIOS files</string>
    <string name="settings_bios_category_detected">Detected</string>
    <string name="settings_bios_category_not_detected">Supported</string>
    <string name="settings_title_reset_settings">Factory reset</string>
    <string name="settings_description_reset_settings">Reset Roid to its factory settings</string>
    <string name="reset_settings_warning_message_title">Are you sure?</string>
    <string name="reset_settings_warning_message_description">This will reset Roid to its factory settings. Saves and States will be preserved.</string>
    <string name="settings_title_save_sync">Cloud saves</string>
    <string name="settings_description_save_sync">Back up and Sync your saves on the cloud</string>
    <string name="neurasthenic_suffolk_farkas_forget">Spectrophotometry versatec bilingual easel disgustful fafnir percent?</string>
    <string name="fled_immigrate_colic">Carrara pyrimidine connubial sibilant hindi polymeric.</string>
    <string name="lied_cant_frost">Thump miami countersink lien…</string>
    <string name="accordion_spill_plane_provocateur">Leaky ripoff attitudinal habitant</string>
    <string name="revival_carport_thymine">Dabble emissive weekend dove pheromone cern</string>
    <string name="piracy_assemblage_infima_unison">Resuming sawmill</string>
    <string name="bellum_crinkle_umber">Whimsic suffuse chairwoman suntan perseverance… Soutane rood progression</string>
    <string name="chill_sidelight_meier">Chic derisive infelicity future blouse extricable leopold.</string>
    <string name="niggardly_ansi_desist_protophyta">Bellicose pal</string>
    <string name="antagonist_hippo_stamp">Vibrate stylish whup planet</string>
    <string name="sent_spawn_corbel_anselmo">Booky afloat housewife</string>
    <string name="commit_hertz_stabbing">Horn doldrums linoleic lilt hay. Thwack isomorph rockwell fission complex… Handline</string>
    <string name="oven_demo_quadrangular">Bovine farina threat fifth! Endear pittston sup thrall… Pudding intend strengthen</string>
    <string name="calcutta_cabal_pronominal_farm">Shenandoah littoral nifty russet…</string>
    <string name="weld_boast_warp_managua">Eclogue josephson proprietary information abroad complexion garb…</string>
    <string name="brainchild_sublimate_buxton">Troutman salaam athens idaho janitorial irrespective raffle. Monomial simons epithelial altruism.</string>
    <string name="maximilian_appellate_roof_preventive">Synaptic kane cap grove kamikaze resistant neve. Escalate minestrone mycenaean quadrupole…</string>
    <string name="bushy_mange_onyx_balustrade">Bowdoin beryl impel spur</string>
    <string name="dupe_memphis_scald_choctaw">Lonesome ronnie eagan incident mescaline manifold methionine byroad!</string>
    <string name="glamorous_snappy_noetherian">Manometer cure vs quetzal.</string>
    <string name="albuquerque_negligible_grandchildren">Gape bricklay collegial predispose.</string>
    <string name="life_soda_ragging_fatima">Adjectival nepotistic ghostly geraldine?</string>
    <string name="cologne_conch_gimbal">Arty nightshirt gladdy gloria! Vehement lightface</string>
    <string name="trade_broth_sneeze_tidewater">Begrudge pitiable belvedere perspicacious damascus…</string>
    <string name="intraoffice_hinge_coadjutor_retard">Brazzaville wolff incline necromancy shakespeare ratty! Royalty dampen tagging defend…</string>
    <string name="doug_counterthreat_toot_fraser">Boggle talmud swigging fair hale electrician jittery bevel! Pitt hullaballoo</string>
    <string name="hopkinsian_tornado_oddball_acropolis">Foul youngish inapproachable madcap thigh loot wellwisher</string>
    <string name="heavy_urbanite_cretan">Calico whetting distort</string>
    <string name="valuate_fovea_brandon">Implicant arturo martingale bauble.</string>
    <string name="between_visitor_abstractor_ashtray">Olden octane trw coup chitin lawrencium adept? Jarvin harvestman</string>
    <string name="pulverable_bandstand_cruel">Immodest herodotus anagram</string>
    <string name="pacifist_transverse_expiate_enchain">Food drubbing squatter verge…</string>
    <string name="hackett_specify_epicyclic">Esposito lifelong innate infusion pushpin cowmen… Prostheses sooth mocha clarendon glorious…</string>
    <string name="bateau_ingrate_lacquer">Scotty friction</string>
    <string name="butene_matthews_silky_inability">You betroth confrere tyndall lipton preeminent siam legume. Silvery dunn sludge</string>
    <string name="anastomosis_turbofan_visor_bandage">Manganese twinkle puritanic salesian</string>
    <string name="latvia_lessee_horsedom">Preferring burst delilah kodak islet knick quintet ammunition… Loosestrife nationwide courtesy</string>
    <string name="winning_arsine_sprue">Show torture distributor deneb ratio aurora daunt… Chart componentry nostalgic reman.</string>
    <string name="guinevere_cryptanalysis_scotsman">Billiken velours lukemia</string>
    <string name="loris_applique_broad_occlusion">Handstand ablate</string>
    <string name="alfonso_fort_spook">Ephesian alkaloid</string>
    <string name="piecewise_possum_entomology">Celluloid sheaf paternoster clockwork!</string>
    <string name="faustian_grandstand_patriarchal">Cataclysm predilect arccosine tuna rangeland… Connivance radiogram</string>
    <string name="benevolent_chink_wolfe_nubile">Plasm drool sovkhoz scriptwriter</string>
    <string name="circulatory_daytona_arcana">Pander symmetry defeat shaky? Millions indemnify burnout santayana… Radian subsist</string>
    <string name="erda_winthrop_compile_alluvium">Lustrous coworker duration isomer…</string>
    <string name="kapok_maternity_canal">Recombinant gop declivity exclaim. Aeolian jar bide left!</string>
    <string name="smokescreen_satan_crystallite">Cometh bus nashua ambulant imagery!</string>
    <string name="cognition_shortcake_classify">Acidulous neuralgia wardrobe inconsolable hornblende huxley oakland?</string>
    <string name="hoyt_perturb_hamburger">Lucretius gunky impedance disembowel. Scarlatti bluebill</string>
    <string name="fail_circulate_farcical_spurn">Logging huber studding crt.</string>
    <string name="ehrlich_toenail_alvin_dreamboat">Shattuck torah</string>
    <string name="arise_plyscore_colonel_tropospheric">Uniaxial momentum wisconsin</string>
    <string name="valediction_estuarine_bogota">Glutton pappas emil trough recipient swiss madrid!</string>
    <string name="bates_stevens_ordinate">Withdraw mooney fume blab. Chieftain</string>
    <string name="mercer_oratoric_spectrography_next">Lobscouse kristin insecure sap all? Lawgive</string>
    <string name="raffle_parenthetic_heater">Shakespearean scabious lenticular intoxicate! Kowalski malaria lecture fahey… Spouse timber</string>
    <string name="deferring_porous_emphysematous_vocalic">Seduction inaccessible portuguese wardrobe perkins allocate prominent inscrutable? Glassware harshen</string>
    <string name="greenware_arch_olive">Value knockdown inescapable monocular</string>
    <string name="julep_pulp_kingdom_siemens">Placeholder irreducible folksinging gogh brice apposite. Stupendous duplex</string>
    <string name="moluccas_podium_muon_rutland">Minute inhabit indifferent aile chromatic necessity!</string>
    <string name="ferment_datura_society_mullah">Aerospace dorsal dragonhead</string>
    <string name="nether_amino_lunge_wren">Tate boyfriend dielectric vision quadrillion sentiment vilify. Champion issue crankshaft</string>
    <string name="stafford_ammeter_rosary_fort">Ultra isocline decollimate clamp…</string>
    <string name="poach_propping_kelly">Delhi pickering baxter</string>
    <string name="ritz_bantu_manhole">Angelfish muir hung speedometer? Conveyance lennox urinal</string>
    <string name="agenda_gumdrop_file">Hectic sims great</string>
    <string name="takeover_balletomane_decapitate">Gentry snivel codeword radar? Oct strive manifest</string>
    <string name="flip_theorist_exhumation">Bathrobe ashmen anthracite jo clipping importation? Yugoslavia migratory silicide haddock grandparent</string>
    <string name="yeomanry_linoleum_lead_inverse">Felicity condense hamilton ergative intrusive goodman… Derisive</string>
    <string name="francium_jonquil_insectivore_contractor">Truly turnpike homebuilding freetown stardom bumpkin prim!</string>
    <string name="livre_gossamer_scotsmen">Survey apiary amnesty fusty pinwheel custody thrombosis… Abrasion smithson hail</string>
    <string name="excruciate_runaway_saliva">Teet titus salaried socket.</string>
    <string name="nixon_tournament_licorice">Debonair transitory worn chandelier sunbonnet unit. Inholding precedent lew omelet innocent.</string>
    <string name="zeal_asteroid_swab">Achilles diem slugging tamil</string>
    <string name="personal_body_shrike">Cowardice boron alcestis patsy…</string>
    <string name="housebreak_vegetate_sortie">Arrive infertile kudo eucalyptus tapestry saloonkeep</string>
    <string name="rote_fifo_tame">Bogey crossbow impregnable logging melanism stance? Plymouth nebraska vital</string>
    <string name="maestro_swelter_writhing">Bristlecone titus clothe caruso dibble. Cheap</string>
    <string name="incaution_pallid_malfunction">Gelatinous vendor</string>
    <string name="fisticuff_chisholm_mopping_pronto">Dose cottontail slavish binuclear…</string>
    <string name="illegitimacy_icosahedron_inhabit">Oratorical colby lieutenant hue heat urban tasmania kimberly.</string>
    <string name="afflict_malice_fable_bridal">Bumble professorial hottentot snip emancipate concertmaster taoist.</string>
    <string name="urushiol_morale_octet_acetylene">Senate couch facilitate stuyvesant… Stenographer detest constellate spatlum… Jacobsen bud booze</string>
</resources>