<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <TextView android:background="@color/simulcast_rootstock" android:hint="@string/albuquerque_negligible_grandchildren" android:id="@+id/gaurView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/greenware_arch_olive" android:textColor="@color/mendacity_british_taxation" app:layout_constraintBottom_toTopOf="@id/hikeAntwerpLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout android:gravity="top" android:id="@+id/hikeAntwerpLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/antipastoMatchbookView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gaurView">
        <CheckedTextView android:background="@color/immaterial_approximate" android:hint="@string/trade_broth_sneeze_tidewater" android:id="@+id/acetyleneShriftView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="20dp" android:paddingBottom="@dimen/leaden_alum_size" android:text="@string/piecewise_possum_entomology" android:textColor="@color/madam_sketchy" android:textSize="30sp"/>
        <TextView android:background="@color/suntanned_agony_pipetting" android:hint="@string/sent_spawn_corbel_anselmo" android:id="@+id/yearnProtestationView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/urushiol_morale_octet_acetylene" android:textColor="#633DF8DF"/>
        <EditText android:background="@color/yawl_foundation_mirage" android:hint="@string/bellum_crinkle_umber" android:id="@+id/tropopauseDigammaView" android:inputType="textMultiLine" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/latvia_lessee_horsedom" android:textColor="@color/hypophyseal_strand_encumbrance"/>
        <CheckedTextView android:background="@color/imperial_spinning_pinkish" android:hint="@string/pulverable_bandstand_cruel" android:id="@+id/pourView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/mollusk_sanchez_size" android:paddingEnd="@dimen/fleshy_bedrock_margin" android:paddingStart="42dp" android:paddingTop="@dimen/horsefly_tyburn_height" android:text="@string/deferring_porous_emphysematous_vocalic" android:textColor="@color/illusory_kangaroo"/>
        <CheckedTextView android:background="#5F19E02D" android:hint="@string/commit_hertz_stabbing" android:id="@+id/cluePestView" android:layout_height="match_parent" android:layout_marginBottom="@dimen/consensus_right_padding" android:layout_width="wrap_content" android:text="@string/ferment_datura_society_mullah" android:textColor="#73BEFCD8"/>
        <Button android:hint="@string/valediction_estuarine_bogota" android:id="@+id/oppressionView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/circulatory_daytona_arcana" android:textColor="#48CA93"/>
        <Button android:background="@color/flirt_wallow_anabaptist" android:hint="@string/lied_cant_frost" android:id="@+id/motleyMildewView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/strand_voracious_margin" android:layout_marginStart="@dimen/succubus_nubile_size" android:layout_marginTop="@dimen/stauffer_matthews_margin" android:layout_width="wrap_content" android:paddingBottom="@dimen/lynx_stale" android:paddingEnd="@dimen/doreen_editor_size" android:paddingStart="34dp" android:paddingTop="@dimen/abelian_frisian_height" android:text="@string/maestro_swelter_writhing" android:textColor="@color/chairman_shot_ordnance"/>
        <Button android:hint="@string/cognition_shortcake_classify" android:id="@+id/metalliferousHainesView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/numeric_oboe_height" android:text="@string/winning_arsine_sprue" android:textColor="#B9C5DD"/>
        <CheckedTextView android:background="@color/kickoff_scanning_salivate" android:hint="@string/piracy_assemblage_infima_unison" android:id="@+id/durhamView" android:layout_height="match_parent" android:layout_width="wrap_content" android:padding="14dp" android:text="@string/accordion_spill_plane_provocateur" android:textSize="@dimen/bade_doctoral_textsize"/>
        <CheckBox android:background="#ECAA1A" android:hint="@string/mercer_oratoric_spectrography_next" android:id="@+id/takenHispanicView" android:layout_height="match_parent" android:layout_width="wrap_content" android:padding="18dp" android:text="@string/life_soda_ragging_fatima" android:textColor="@color/downside_storekeep_scuff"/>
        <TextView android:background="#4B63DA" android:hint="@string/niggardly_ansi_desist_protophyta" android:id="@+id/talusArrowrootView" android:layout_height="match_parent" android:layout_marginBottom="@dimen/furious_tatty_size" android:layout_width="wrap_content" android:text="@string/bateau_ingrate_lacquer" android:textColor="@color/francis_western_thee"/>
        <CheckBox android:background="@color/syllabus_walk_parley" android:hint="@string/heavy_urbanite_cretan" android:id="@+id/exploitView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/maximilian_appellate_roof_preventive" android:textColor="@color/newbold_churchmen"/>
        <TextView android:background="@color/trillionth_marcus_clutch" android:hint="@string/valuate_fovea_brandon" android:id="@+id/napeView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingTop="@dimen/penrose_venom_margin" android:text="@string/excruciate_runaway_saliva" android:textColor="@color/backboard_panacea" android:textSize="@dimen/planar_astute_textsize"/>
        <Button android:background="@color/fridge_innards" android:hint="@string/illegitimacy_icosahedron_inhabit" android:id="@+id/cypriotView" android:layout_height="match_parent" android:layout_margin="24dp" android:layout_width="wrap_content" android:text="@string/hopkinsian_tornado_oddball_acropolis"/>
        <LinearLayout android:gravity="bottom|center_vertical" android:id="@+id/proprietorLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal">
            <Button android:background="@color/trivalent_thicken_bondsmen" android:hint="@string/fail_circulate_farcical_spurn" android:id="@+id/nodularIntegumentView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingTop="@dimen/change_altitude_padding" android:text="@string/faustian_grandstand_patriarchal" android:textColor="#2BAE2F"/>
            <EditText android:background="#E8763A" android:hint="@string/incaution_pallid_malfunction" android:id="@+id/raterLecheryView" android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/saskatchewan_fitzroy_height" android:paddingEnd="@dimen/these_inertia" android:paddingStart="@dimen/mallory_czar_padding" android:text="@string/hoyt_perturb_hamburger" android:textColor="@color/smudgy_hydrophobia"/>
        </LinearLayout>
        <TextView android:background="@color/morrissey_throw_thayer" android:hint="@string/fisticuff_chisholm_mopping_pronto" android:id="@+id/miseryView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/butene_matthews_silky_inability"/>
        <Button android:hint="@string/chill_sidelight_meier" android:id="@+id/derangeWeanView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/nectar_fall_margin" android:text="@string/bates_stevens_ordinate"/>
    </LinearLayout>
    <AutoCompleteTextView android:background="@color/diphtheria_offspring" android:hint="@string/anastomosis_turbofan_visor_bandage" android:id="@+id/antipastoMatchbookView" android:layout_height="wrap_content" android:layout_width="@dimen/bong_grumble_margin" android:text="@string/housebreak_vegetate_sortie" app:layout_constraintBottom_toTopOf="@id/endothelialEternalView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/hikeAntwerpLayout"/>
    <CheckedTextView android:background="@color/fain_halstead_efficacious" android:hint="@string/agenda_gumdrop_file" android:id="@+id/endothelialEternalView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/perception_tress" android:layout_marginEnd="@dimen/mudguard_eardrum_width" android:layout_marginStart="@dimen/abrade_activate_padding" android:layout_marginTop="46dp" android:layout_width="@dimen/picnicking_firehouse_padding" android:text="@string/moluccas_podium_muon_rutland" app:layout_constraintBottom_toTopOf="@id/pheromoneView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/antipastoMatchbookView"/>
    <AutoCompleteTextView android:background="@color/arrowhead_erik" android:hint="@string/intraoffice_hinge_coadjutor_retard" android:id="@+id/pheromoneView" android:layout_height="wrap_content" android:layout_width="@dimen/mantle_transit_height" android:text="@string/poach_propping_kelly" android:textSize="@dimen/dickey_emulate_textsize" app:layout_constraintBottom_toTopOf="@id/blipAcclamationView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/endothelialEternalView"/>
    <EditText android:background="@color/madman_filmy" android:hint="@string/ritz_bantu_manhole" android:id="@+id/blipAcclamationView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/alfonso_fort_spook" android:textColor="@color/cloudburst_fungicide" android:textSize="@dimen/paleozoic_cuckoo_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pheromoneView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
