<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <CheckBox android:background="@color/colander_windy" android:hint="@string/urushiol_morale_octet_acetylene" android:id="@+id/muslimView" android:layout_height="wrap_content" android:layout_width="@dimen/extrusive_paycheck_size" android:text="@string/kapok_maternity_canal" android:textColor="#558A47" android:textSize="@dimen/nora_marzipan_textsize" app:layout_constraintBottom_toTopOf="@id/shambleView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:background="@color/presumed_avocation" android:hint="@string/antagonist_hippo_stamp" android:id="@+id/shambleView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/offsaddle_gambit_padding" android:layout_marginEnd="@dimen/bong_grumble_margin" android:layout_marginStart="@dimen/prospector_gentian_margin" android:layout_width="wrap_content" android:text="@string/stafford_ammeter_rosary_fort" app:layout_constraintBottom_toTopOf="@id/photometryKingsleyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/muslimView"/>
    <Button android:background="#1007558A" android:hint="@string/dupe_memphis_scald_choctaw" android:id="@+id/photometryKingsleyView" android:layout_height="wrap_content" android:layout_marginEnd="16dp" android:layout_marginStart="28dp" android:layout_width="0dp" android:text="@string/smokescreen_satan_crystallite" app:layout_constraintBottom_toTopOf="@id/tableauView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/shambleView"/>
    <AutoCompleteTextView android:background="#9BE276" android:hint="@string/fled_immigrate_colic" android:id="@+id/tableauView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/maestro_swelter_writhing" android:textColor="@color/reserve_kate" app:layout_constraintBottom_toTopOf="@id/jealousView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/photometryKingsleyView"/>
    <TextView android:hint="@string/loris_applique_broad_occlusion" android:id="@+id/jealousView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/calcutta_cabal_pronominal_farm" android:textColor="@color/shutoff_tamil_alterman" app:layout_constraintBottom_toTopOf="@id/sophisticateSuntanView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tableauView"/>
    <Button android:background="@color/skeleta_kodak_riot" android:hint="@string/excruciate_runaway_saliva" android:id="@+id/sophisticateSuntanView" android:layout_height="wrap_content" android:layout_marginTop="@dimen/panty_gavel_width" android:layout_width="0dp" android:text="@string/between_visitor_abstractor_ashtray" app:layout_constraintBottom_toTopOf="@id/epistemologyStokeLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/jealousView"/>
    <LinearLayout android:gravity="start" android:id="@+id/epistemologyStokeLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/damoclesView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sophisticateSuntanView">
        <AutoCompleteTextView android:background="@color/devolve_lithuania_duly" android:hint="@string/rote_fifo_tame" android:id="@+id/copeAcclaimView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/afflict_malice_fable_bridal" android:textColor="#BA8412" android:textSize="16sp"/>
        <EditText android:background="@color/footpad_sumter_penicillin" android:hint="@string/hackett_specify_epicyclic" android:id="@+id/entertainView" android:inputType="textCapWords" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/hoyt_perturb_hamburger" android:textSize="@dimen/infrastructure_trifluouride_textsize"/>
        <Button android:hint="@string/livre_gossamer_scotsmen" android:id="@+id/epitaxyRepetitionView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/neurasthenic_suffolk_farkas_forget" android:textColor="@color/anaheim_commendation"/>
        <EditText android:background="#0558B358" android:hint="@string/ehrlich_toenail_alvin_dreamboat" android:id="@+id/ramoIndependentView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/benevolent_chink_wolfe_nubile" android:textColor="@color/zachary_semitic_aqueous"/>
        <Button android:background="@color/grin_inspiration" android:hint="@string/revival_carport_thymine" android:id="@+id/shrapnelView" android:layout_height="wrap_content" android:layout_margin="@dimen/grace_begun_size" android:layout_width="wrap_content" android:padding="42dp" android:text="@string/flip_theorist_exhumation" android:textColor="@color/adrenal_pusey"/>
        <LinearLayout android:gravity="start" android:id="@+id/indiumLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" android:padding="@dimen/messrs_hanoverian_size">
            <Button android:hint="@string/doug_counterthreat_toot_fraser" android:id="@+id/erieYugoslavView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/euclidean_rabbit_padding" android:layout_marginStart="@dimen/daedalus_wand_width" android:layout_width="match_parent" android:text="@string/personal_body_shrike" android:textColor="#19FBD27B"/>
            <CheckBox android:hint="@string/yeomanry_linoleum_lead_inverse" android:id="@+id/importantDragonView" android:layout_height="wrap_content" android:layout_margin="@dimen/firewood_triploidy_width" android:layout_width="wrap_content" android:text="@string/arise_plyscore_colonel_tropospheric" android:textColor="@color/bronchiolar_hubbub"/>
            <TextView android:background="@color/chairman_shot_ordnance" android:hint="@string/nether_amino_lunge_wren" android:id="@+id/bluffView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/guinevere_cryptanalysis_scotsman" android:textColor="@color/polymeric_dishwater"/>
            <CheckBox android:background="@color/overt_drawback_basepoint" android:hint="@string/weld_boast_warp_managua" android:id="@+id/whitherView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/raffle_parenthetic_heater" android:textColor="@color/legion_homeland"/>
            <EditText android:background="#6D6364" android:hint="@string/takeover_balletomane_decapitate" android:id="@+id/teenSubbingView" android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/gabriel_honesty" android:paddingStart="@dimen/accelerate_mangle_width" android:paddingTop="@dimen/resemble_nautilus_margin" android:text="@string/julep_pulp_kingdom_siemens" android:textColor="@color/papyri_talon"/>
            <TextView android:background="@color/rothschild_madame" android:hint="@string/brainchild_sublimate_buxton" android:id="@+id/slumView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/glamorous_snappy_noetherian" android:textColor="@color/zachary_semitic_aqueous" android:textSize="@dimen/shelton_miscellany_textsize"/>
            <CheckBox android:hint="@string/pacifist_transverse_expiate_enchain" android:id="@+id/seizureHinduismView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/railway_degree_width" android:layout_marginTop="@dimen/aback_olefin" android:layout_width="wrap_content" android:text="@string/bushy_mange_onyx_balustrade" android:textColor="@color/retort_washbasin" android:textSize="@dimen/fijian_assassinate_textsize"/>
        </LinearLayout>
        <CheckBox android:background="@color/recoup_wretch_staff" android:hint="@string/cologne_conch_gimbal" android:id="@+id/committeemanCarabaoView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/francium_jonquil_insectivore_contractor"/>
        <CheckBox android:background="@color/furnish_nifty_denude" android:hint="@string/intraoffice_hinge_coadjutor_retard" android:id="@+id/wovenPhysiotherapyView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/nixon_tournament_licorice" android:textColor="@color/consulate_twirl_palmetto"/>
        <AutoCompleteTextView android:background="@color/necropsy_laryngeal_stuttgart" android:hint="@string/erda_winthrop_compile_alluvium" android:id="@+id/buzzyView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/oven_demo_quadrangular" android:textColor="@color/bacterial_dorset_solomon"/>
    </LinearLayout>
    <AutoCompleteTextView android:background="@color/flirt_wallow_anabaptist" android:hint="@string/sent_spawn_corbel_anselmo" android:id="@+id/damoclesView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/zeal_asteroid_swab" android:textColor="@color/hypophyseal_strand_encumbrance" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/epistemologyStokeLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
