<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  *  RetrogradeApplicationComponent.kt
  ~  *
  ~  *  Copyright (C) 2017 Retrograde Project
  ~  *
  ~  *  This program is free software: you can redistribute it and/or modify
  ~  *  it under the terms of the GNU General Public License as published by
  ~  *  the Free Software Foundation, either version 3 of the License, or
  ~  *  (at your option) any later version.
  ~  *
  ~  *  This program is distributed in the hope that it will be useful,
  ~  *  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  *  GNU General Public License for more details.
  ~  *
  ~  *  You should have received a copy of the GNU General Public License
  ~  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  *
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorites" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_systems"
        android:icon="@drawable/ic_videogame_asset_black_24dp"
        android:title="@string/title_systems" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>
